--- a/styles/indexpage.css
+++ b/styles/indexpage.css
@@ -11,3 +11,11 @@
 .errorMessage{
    color: red;
 }
+button{
+  margin-bottom: 20px;
+  padding: 6px 12px;
+  background-color: #ddd;
+  border: 1px solid #aaa;
+  border-radius: 4px;
+  cursor: pointer;
+}
